fix: Fix alignment of input boxes

--- a/src/client/styles/Login.css
+++ b/src/client/styles/Login.css
@@ -10,8 +10,13 @@
     background-color: #f8f9fd;
   }
   
-  input[type="text"],
+
+  input[type="text"]{
+    height: 25px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+  }
   input[type="password"] {
+    margin-left: 3px;
     height: 25px;
     border: 1px solid rgba(0, 0, 0, 0.2);
   }
